--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Grishon Nganga <grishon.nganga01@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "africastalking": "^0.6.2",
+    "express": "^4.18.2"
+  }
 }
