--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "sms-chatgpt",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "author": "Grishon Nganga <grishon.nganga01@gmail.com>",
   "license": "MIT",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node src/server.js",
+    "watch": "nodemon src/server.js"
+  },
   "devDependencies": {
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "@types/node": "^20.7.1",
     "africastalking": "^0.6.2",
     "express": "^4.18.2"
   }
