--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.7.1",
     "africastalking": "^0.6.2",
     "express": "^4.18.2",
-    "openai": "^4.0.0"
-}
+    "openai": "^4.0.0",
+    "pg": "^8.11.3"
+  }
 }
